# cosmos-rl

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .robotwin_env  ATTRIBUTIONS.md  Dockerfile  Dockerfile.arm64  README.md  avla_example.py  check_weights.py  compare_checkpoints.py  compare_fix_input.py  compare_pt_tensors.py  config.toml  constraints.txt  genindex.html  index.html  install.sh  objects.inv  print_visual_embedding_debug.py  pyproject.toml  qwen_vl.toml  qwen_vl_cosmos.py  requirements.txt  ruff.toml  run.sh  run_pi05_b1k_sft.sh  sana-image-sft.toml  sana-video-sft.toml  sana_ut.py  search.html  searchindex.js  setup.py  setup.sh  test.py  test_pi05.sh
.github/workflows/: build-and-test.yaml  doc_pages.yaml  docker-image.yml
_sources/: index.rst.txt
_sources/quickstart/: load_balanced_batching.rst.txt
_sources/wfm/: overview.rst.txt
async/: overview.html
benchmarks/: benchmark.py
configs/: sft.toml  sft_tao_default.toml
configs/cosmos-policy/: cosmos-policy-libero10-eval.toml
configs/cosmos-predict2-5/: cosmos-predict2-5-14b-720-reason-embedding-ddrl.toml  cosmos-predict2-5-2b-480-grpo-mock-data.toml  cosmos-predict2-5-2b-480-grpo.toml  cosmos-predict2-5-2b-720-nft.toml  cosmos-predict2-5-2b-720-reason-embedding-ddrl.toml  cosmos-predict2-5_14b_720_reason_embedding_ddrl.toml  cosmos-predict2-5_2b_480_grpo.toml  (+1 more)
cosmos_rl/: __init__.py  test.ipynb
cosmos_rl_vlm/: README.md  cosmos_vlm_launcher.py  i4_data_utils.py  i4_vlm_sft.py  qwen3-vl-custom.toml
distillation/: on_policy_distillation.html
docker/: Dockerfile.gpt-oss  Dockerfile.trtllm
docs/: NEMOTRON_VL_TRAINING_GUIDE.md  README.md  conf.py  index.rst
elastic/: overview.html
examples/: ddrl.md  on_policy_distillation.md  profiler.md  sana.md
multi_turn/: multi-turn rollout example.html
multinodes/: dgxc_lepton.html  overview.html  slurm.html
naruto/: data.py  encoder.py  flow.py  inference.py  q_former.py  train.py  util.py
nemotron_overwrite/: chat_template.json  processing.py  video_preprocessor_config.json
nemotron_vl/: config_sft.toml  inference_nemotron3_nano_qwen3vl_vit.py  inference_nemotron3_nano_siglip2_vit.py  inference_nemotron_dense_siglip2_vit.py  inference_qwen3vl.py  launcher.py  launcher_dpo.py  launcher_sft.py  launcher_wds.py  local_forward_extract.py  local_generate_test.py  local_generate_test_siglip2.py  nemotron_config_local.toml  nemotron_parallelize.py  nemotron_vl.toml  weight_converter.py
parallelism/: overview.html
quantization/: fp8.html
quickstart/: configuration.html  customization.html  dataflow.html  hf_models_support.html  installation.html  load_balanced_batching.html  single_node_example.html
reward_service/: README.md  pyproject.toml
rollout/: async_rollout.html  overview.html  trtllm.html  vllm.html
scripts/: custom_sft.py
tests/: eval_cosmos_policy_libero.py  eval_wfm_policy_libero.py  launch_test_worker.py  run_test.sh  run_vla_test.sh  subprocess_helpers.py  test_apex.py  test_checkpoint.py  test_colocated.py  test_colocated_separated.py  test_comm.py  test_comm_base_attach.py  test_context_parallel.py  test_cosmos_hf_precision.py  test_custom_args.py  test_custom_class.py  test_data_loader.py  test_data_packer.py  test_dataset_signature.py  test_deepep.py  test_diffusion_rl_e2e.py  test_dpo_direct.py  test_dummy_load.py  test_env_manager_b1k.py  test_env_manager_libero.py  test_env_manager_maniskill.py  test_env_manager_robotwin.py  test_fa_switch.py  test_fp8.py  test_grad_allreduce.py  test_gym_api.py  test_gym_example.py  test_hf_models.py  test_hf_models_tp.py  test_high_availability_nccl.py  test_integration.py  test_load_balanced_dataset.py  test_lora.py  test_math_verify.py  test_mmpr_dpo_dataset.py  (+33 more)
tools/: launch_all.py
vla/: overview.html
wfm/: overview.html
(+871 files in other folders)
