[project]
name = "cosmos_rl"
description = "Cosmos-RL is a flexible and scalable Reinforcement Learning framework specialized for Physical AI applications."
readme = "README.md"
requires-python = ">=3.9"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
constraints = [
    "nvidia-nccl-cu12>=2.26.2"
]

[project.urls]
Homepage = "https://github.com/nvidia-cosmos/cosmos-rl"

[project.scripts]
cosmos-rl = "cosmos_rl.launcher.launch_all:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cosmos_rl = ["launcher/*.sh"]