[project]
name = "cosmos_rl"
description = "Cosmos-RL is a flexible and scalable Reinforcement Learning framework specialized for Physical AI applications."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/nvidia-cosmos/cosmos-rl"

[project.scripts]
cosmos-rl = "cosmos_rl.launcher.launch_all:main"

[tool.setuptools]
packages = ["cosmos_rl"]
include-package-data = true

[tool.setuptools.package-data]
cosmos_rl = ["launcher/*.sh"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2,<=7.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cosmos_rl/_version.py"

# add .post1.devN to last tagged version (N is the number of commits
# since the tagged commit)
version_scheme="no-guess-dev"
# add git commit (and date if working dir is dirty) to the version tag
local_scheme="node-and-date"