[project]
name = "cosmos-rl"
description = "Cosmos-RL is a flexible and scalable Reinforcement Learning framework specialized for Physical AI applications."
readme = "README.md"
#dynamic = ["dependencies", "version"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "bddl==1.0.1",
    "blobfile",
    "boto3",
    "click",
    "cloudpickle==2.1.0",
    "datasets",
    "easydict==1.9",
    "einops==0.4.1",
    "fastapi",
    "flash-attn>=2.8.3",
    "future==0.18.2",
    "gym==0.25.2",
    "hydra-core==1.2.0",
    "kernels",
    "libero",
    "liger-kernel",
    "math-verify",
    "matplotlib==3.5.3",
    "modelscope",
    "msgpack",
    "numpy<2",
    "nvidia-nccl-cu12>=2.26.2",
    "opencv-python==4.6.0.66",
    "pybind11[global]",
    "pydantic",
    "pynvml",
    "pyyaml",
    "qwen-vl-utils",
    "redis",
    "rich",
    "robomimic==0.2.0",
    "robosuite==1.4.0",
    "strenum",
    "tensordict==0.7.2",
    "tensorflow==2.15",
    "thop==0.1.1.post2209072238",
    "timm<1",
    "toml",
    "torch>=2.6.0",
    "torchao>=0.10.0",
    "torchvision>=0.21.0",
    "transformers",
    "uvicorn",
    "vllm>=0.8.5",
    "wandb==0.13.1",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cosmos_rl/_version.py"

# add .post1.devN to last tagged version (N is the number of commits
# since the tagged commit)
version_scheme="no-guess-dev"
# add git commit (and date if working dir is dirty) to the version tag
local_scheme="node-and-date"

[project.urls]
Homepage = "https://github.com/nvidia-cosmos/cosmos-rl"

[project.scripts]
cosmos-rl = "cosmos_rl.launcher.launch_all:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cosmos_rl = [
    "launcher/*.sh",
    "tools/chat_templates/*.jinja2"
]

[tool.setuptools.packages.find]
include = ["cosmos_rl*"]

#[tool.setuptools.dynamic]


[tool.uv.sources]
libero = { path = "../LIBERO" }
transformers = { path = "../transformers", editable = true }
